Fix issue on mobile.

--- a/limtekbg/App/StyleSheets/administration.scss
+++ b/limtekbg/App/StyleSheets/administration.scss
@@ -2,7 +2,7 @@ body{
   #MainWrapper{
     header{
       background-color: lightgray;
-      padding: 1rem;
+      padding-top: 1rem;
     }
   }
 }
